
[project]
name = "jdev2026-python-wheel-charlycou"
version = "0.0.1"
description = "Demo package"
authors = [{name="Charly"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.package-data]
"jdev2026_python_wheel_charlycou" = ["data/*.npz"]

[project.scripts]
decrypt-tool = "jdev2026_python_wheel_charlycou.decrypt_rsa:run_decrypt_rsa"
